--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,15 +1,16 @@
-@import '~@openexo/design-system/theming';
-// @import '~@angular/material/theming';
-// @include mat-core(); 
+@import '~@angular/material/theming';
+@include mat-core(); 
 
 // // Use the desired palette
-// $primary: mat-palette($mat-purple);
-// $secondary: mat-palette($mat-indigo);
-// // Create the theme
-$theme: mat-light-theme($primary, $secondary, $warn);
+$primary: mat-palette($mat-purple);
+$secondary: mat-palette($mat-indigo);
+// Create the theme
+$theme: mat-light-theme($primary, $secondary, $secondary);
 
 // Include component specific mixin
 @include mat-select-theme($theme);
 @include mat-stepper-theme($theme);
 @include mat-checkbox-theme($theme);
+@include mat-autocomplete-theme($theme);
+
 
